# quantAlgoV1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  Dockerfile  PROJECT.md  README.md  SESSION_SUMMARY_2026-02-19.md  alembic.ini  docker-compose.yml  entrypoint.sh  mcp-config.example.json  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 001_initial.py
apps/api/: deps.py  main.py  run.py
apps/api/routers/: autonomous.py  backtests.py  health.py  ml_deps.py  news.py  pnl.py  runs.py  scheduler.py  status.py  strategies.py
apps/mcp_server/: schemas.py  server.py
apps/mcp_server/tools/: backtest.py  execution.py  ingest.py  kb.py  monitoring.py  sentiment.py  strategy.py
apps/scheduler/: jobs.py  worker.py
cli/: __init__.py  client.py  config.py  main.py
cli/commands/: autonomous.py  completion.py  cycle.py  dashboard.py  market_data.py  ml_deps.py  news.py  pnl.py  runs.py  scheduler.py  status.py  strategies.py  upgrade.py
cli/views/: dashboard_view.py  news_view.py  pnl_view.py  runs_view.py  status_view.py  strategies_view.py
core/: config.py  logging.py  timeutils.py
core/agent/: approval.py  prompts.py  quality_scorer.py  rag_agent.py  strategy_language.py  validator.py
core/backtesting/: cost_model.py  engine.py  metrics.py
core/execution/: alpaca_paper.py  broker_base.py  guard.py  paper_broker.py  position_sizing.py  price_feed.py  risk.py  signal_evaluator.py
core/ingestion/: dedupe.py  normalize.py  ticker_extract.py
core/ingestion/fetchers/: base.py  market_data.py  provider_newsapi.py  rss.py
core/kb/: chunking.py  embeddings.py  retrieval.py  sentiment.py  vectorstore.py
core/observability/: tracing.py
core/storage/: db.py  models.py
core/storage/repos/: market_data_repo.py  news_repo.py  pnl_repo.py  run_repo.py  strategy_repo.py
core/strategies/: base.py  registry.py
core/strategies/implementations/: __init__.py  event_risk_off.py  sentiment_momentum.py
cpp/: CMakeLists.txt
cpp/bindings/: bind_backtest.cpp  bind_cost_model.cpp  bind_metrics.cpp  bind_order_position.cpp  bind_paper_broker.cpp  bind_position_sizer.cpp  bind_risk.cpp  bind_signal_reconciler.cpp  module.cpp
cpp/include/quant_core/: backtest_engine.hpp  cost_model.hpp  metrics.hpp  order.hpp  paper_broker.hpp  position.hpp  position_sizer.hpp  risk_checks.hpp  signal_reconciler.hpp  types.hpp
cpp/src/: backtest_engine.cpp  cost_model.cpp  metrics.cpp  paper_broker.cpp  position_sizer.cpp  risk_checks.cpp  signal_reconciler.cpp
cpp/tests/: CMakeLists.txt  test_backtest_engine.cpp  test_cost_model.cpp  test_metrics.cpp  test_paper_broker.cpp
sandbox/: README.md  test_alpaca_connection.py  test_strategy_pipeline.py
scripts/: ensure_ml_deps.py
tests/: conftest.py  test_alpaca_paper.py  test_api_backtests.py  test_api_news.py  test_api_pnl.py  test_api_runs.py  test_api_strategies.py  test_approval_gate.py  test_auto_approve.py  test_backtest_smoke.py  test_cli.py  test_cpp_parity.py  test_deactivate.py  test_dedupe.py  test_market_data.py  test_market_hours.py  test_mcp_tools.py  test_monitoring_tools.py  test_multi_agent.py  test_news_cleanup.py  test_paper_guard.py  test_price_feed.py  test_quality_scorer.py  test_risk_circuit_breaker.py  test_scheduler_jobs.py  test_scheduler_pause.py  test_signal_evaluator.py  test_smoke.py  test_strategy_expiry.py  test_strategy_validator.py  test_ticker_extract.py
